custom-resource-consumers/takeout/apps/media/plex/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1 # active longhorn-plex nas
  selector:
    matchLabels:
      app: plex
  serviceName: plex
  template:
    metadata:
      annotations: {}
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:1.29.1.6316-f4cdfea9c
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 32400
          volumeMounts:
            - mountPath: "/media"
              name: nas-volume1-media
            - mountPath: "/dev/dri"
              name: dri
            - mountPath: "/config"
              name: plex-config
            - mountPath: "/transcode"
              name: transcode
          # note to myself in the future: this is needed in order to use /dev/dri
          # there is an alternative but it's more work
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 8192Mi
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config-longhorn-plex
        - name: nas-volume1-media
          persistentVolumeClaim:
            claimName: nas-volume1-media
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: transcode
          emptyDir:
            {}
            # medium: Memory
      nodeSelector:
        graphics: dri
        longhorn: primary
      imagePullSecrets:
        - name: docker-hub
