custom-resource-consumers/takeout/apps/media/plex/primary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.64
  externalTrafficPolicy: Local
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
