custom-resource-consumers/takeout/apps/media/plex/primary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "false"
    nignx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
spec:
  tls:
    - hosts:
        - &host "plex.${blog_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex
                port:
                  number: 32400
